// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getMySQLSchemaQuery uses correct schema query 1`] = `
"
SELECT DISTINCT
  INFORMATION_SCHEMA.COLUMNS.TABLE_NAME,
  INFORMATION_SCHEMA.COLUMNS.COLUMN_NAME,
  INFORMATION_SCHEMA.COLUMNS.COLUMN_DEFAULT,
  INFORMATION_SCHEMA.COLUMNS.ORDINAL_POSITION,
  INFORMATION_SCHEMA.COLUMNS.DATA_TYPE,
  INFORMATION_SCHEMA.COLUMNS.COLUMN_TYPE,
  INFORMATION_SCHEMA.COLUMNS.IS_NULLABLE,
  INFORMATION_SCHEMA.COLUMNS.CHARACTER_MAXIMUM_LENGTH,
  INFORMATION_SCHEMA.STATISTICS.INDEX_NAME,
  INFORMATION_SCHEMA.STATISTICS.NON_UNIQUE,
  INFORMATION_SCHEMA.STATISTICS.SEQ_IN_INDEX,
  INFORMATION_SCHEMA.STATISTICS.NULLABLE
FROM INFORMATION_SCHEMA.COLUMNS
LEFT JOIN INFORMATION_SCHEMA.STATISTICS ON INFORMATION_SCHEMA.COLUMNS.TABLE_NAME=INFORMATION_SCHEMA.STATISTICS.TABLE_NAME AND INFORMATION_SCHEMA.COLUMNS.COLUMN_NAME=INFORMATION_SCHEMA.STATISTICS.COLUMN_NAME
WHERE INFORMATION_SCHEMA.COLUMNS.TABLE_SCHEMA = 'mydb'
"
`;

exports[`testMySQLDataSourceAdapter exclude option should not import the given tables 1`] = `
"type Capital @model {
  id: Int! @primaryKey
  name: String
  countryId: Int @index(name: \\"countryId\\")
}

type Country @model {
  id: Int! @primaryKey
  name: String
}
"
`;

exports[`testMySQLDataSourceAdapter generate schema retains hasMany and belongsTo relationship 1`] = `
"type Blog @model {
  id: Int! @primaryKey
  name: String
  posts: [Post] @hasMany(references: [\\"userId\\"])
}

type Post @model {
  id: Int! @primaryKey
  content: String
  blogId: Int!
  blog: Blog @belongsTo(references: [\\"userId\\"])
}
"
`;

exports[`testMySQLDataSourceAdapter generate schema retains hasOne and belongsTo relationship and removes the non-relational fields added manually 1`] = `
"type Profile @model {
  id: Int! @primaryKey
  content: String
  userId: Int!
  user: User @belongsTo(references: [\\"userId\\"])
}

type User @model {
  id: Int! @primaryKey
  name: String
  profile: Profile @hasOne(references: [\\"userId\\"])
}
"
`;

exports[`testMySQLDataSourceAdapter generates a default directive and optional types for fields with literal default values 1`] = `
"type Account @model {
  id: Int! @primaryKey
  serialNumber: Int @default(value: \\"-1\\")
  ownerName: String @default(value: \\"na\\")
  amount: Float @default(value: \\"101.101\\")
}
"
`;

exports[`testMySQLDataSourceAdapter generates optional type but no default directive for fields with computed default values 1`] = `
"type Account @model {
  id: Int! @primaryKey
  computed: Float
}
"
`;

exports[`testMySQLDataSourceAdapter generates primary key fields as required without the default directive added 1`] = `
"type Account @model {
  id: Int! @primaryKey(sortKeyFields: [\\"serialNumber\\"])
  serialNumber: Int!
  ownerName: String
  amount: Float!
}
"
`;

exports[`testMySQLDataSourceAdapter include option should import only the given tables 1`] = `
"type Task @refersTo(name: \\"Tasks\\") @model {
  id: String! @primaryKey(sortKeyFields: [\\"title\\"])
  title: String @index(name: \\"tasks_title\\") @index(name: \\"tasks_title_description\\", sortKeyFields: [\\"description\\"])
  description: String
  priority: String
}
"
`;

exports[`testMySQLDataSourceAdapter test generate graphql schema from internal reprensentation 1`] = `
"type Capital @model {
  id: Int! @primaryKey
  name: String
  countryId: Int @index(name: \\"countryId\\")
}

type Country @model {
  id: Int! @primaryKey
  name: String
}

type Task @refersTo(name: \\"Tasks\\") @model {
  id: String! @primaryKey(sortKeyFields: [\\"title\\"])
  title: String @index(name: \\"tasks_title\\") @index(name: \\"tasks_title_description\\", sortKeyFields: [\\"description\\"])
  description: String
  priority: String
}
"
`;

exports[`testMySQLDataSourceAdapter test generate graphql schema on model with enum field 1`] = `
"type Profile @model {
  id: Int! @primaryKey
  name: String
  type: Profile_type
}

enum Profile_type {
  Manager
  Employee
}
"
`;
